removed fxLayoutGap to fix margin-right issue

--- a/src/app/shows/shows.component.scss
+++ b/src/app/shows/shows.component.scss
@@ -1,8 +1,10 @@
 .cards-container{
-    margin:24px;
+     margin:24px 0px 24px 24px;
 }
 .movies-card{
+    width:410px;
     max-width:410px;
     margin-bottom: 16px;
+    margin-right: 16px;
     height: 400px;
 }
